tests/algorithms/x/C/dynamic_programming/subset_generation.c
// Generated by Mochi 0.10.32 on 2025-08-13 07:12 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t copy_list_len;
size_t subset_combinations_len;
size_t *subset_combinations_lens;

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static char* str_list_list_int(long long **arr, size_t len, const size_t lens[]) {
    size_t cap = 2;
    for (size_t i = 0; i < len; i++) cap += lens[i] * 32 + 3;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char *inner = str_list_int(arr[i], lens[i]);
        size_t n = strlen(inner);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, inner, n);
        pos += n;
        free(inner);
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    return res;
}

static long long*** list_append_intptrptr(long long ***arr, size_t *len, long long **val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long**));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * copy_list(long long * src, size_t src_len);
long long * * subset_combinations(long long * elements, size_t elements_len, long long n);
int main(void);

long long * copy_list(long long * src, size_t src_len) {
    long long *result = NULL;
    size_t result_len = 0;
    long long i = 0LL;
    while (i < src_len) {
        result = list_append_long_long(result, &result_len, src[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? src_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return copy_list_len = result_len, result;
}

long long * * subset_combinations(long long * elements, size_t elements_len, long long n) {
    long long r = elements_len;
    if (n > r) {
        {
            size_t *__tmp1_lens = malloc(0 * sizeof(size_t));
            long long** __tmp1_data = malloc(0 * sizeof(long long*));
            subset_combinations_lens = __tmp1_lens;
            subset_combinations_len = 0;
            return __tmp1_data;
        }
    }
    long long **dp_init[0] = {};
    long long ***dp = dp_init;
    size_t dp_len = 0;
    size_t dp_lens_init[0] = {};
    size_t *dp_lens = dp_lens_init;
    size_t dp_lens_len = 0;
    long long i = 0LL;
    while (i <= r) {
        dp = list_append_intptrptr(dp, &dp_len, ({long long** tmp = malloc(0 * sizeof(long long*)); tmp;}));
        dp_lens = list_append_szt(dp_lens, &dp_lens_len, 0);
        i = i + 1LL;
    }
    dp[(int)(0LL)] = list_append_int_new(dp[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? dp_len + _mochi_idx : _mochi_idx;})], dp_lens[(int)(0LL)], NULL);
    i = 1LL;
    while (i <= r) {
        long long j = i;
        while (j > 0LL) {
            long long **prevs = dp[(int)({long long _mochi_idx = j - 1LL; _mochi_idx < 0 ? dp_len + _mochi_idx : _mochi_idx;})];
            size_t prevs_len = dp_lens[j - 1LL];
            long long k = 0LL;
            while (k < prevs_len) {
                long long *prev = prevs[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? prevs_len + _mochi_idx : _mochi_idx;})];
                size_t prev_len = prevs_lens[k];
                long long *comb = copy_list(prev, prev_len);
                size_t comb_len = copy_list_len;
                comb = list_append_long_long(comb, &comb_len, elements[(int)({long long _mochi_idx = i - 1LL; _mochi_idx < 0 ? elements_len + _mochi_idx : _mochi_idx;})]);
                dp[(int)(j)] = list_append_int_new(dp[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? dp_len + _mochi_idx : _mochi_idx;})], dp_lens[(int)(j)], comb);
                k = k + 1LL;
            }
            j = j - 1LL;
        }
        i = i + 1LL;
    }
    return dp[(int)({long long _mochi_idx = n; _mochi_idx < 0 ? dp_len + _mochi_idx : _mochi_idx;})];
}

int main(void) {
    {
        long long __start = _now();
        puts(({long long **__tmp2 = subset_combinations(({long long *tmp = malloc(4 * sizeof(long long)); tmp[0] = 10LL; tmp[1] = 20LL; tmp[2] = 30LL; tmp[3] = 40LL; tmp;}), 4, 2LL); char *__res = str_list_list_int(__tmp2, subset_combinations_len, subset_combinations_lens); __res;}));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
